--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="heading" id="up-event"><h1 class="hh">UPCOMING EVENTS</h1></div>
     <div class="container">
-       <a href="" style="text-decoration: none;"><div class="box">
+       <a href="event.html" style="text-decoration: none;"><div class="box">
             <div class="img">
                 <img src="https://img.freepik.com/free-vector/music-event-poster-template-with-abstract-shapes_1361-1316.jpg?size=626&ext=jpg" alt="" class="ii">
             </div>
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </div></a>
-        <a href="" style="text-decoration: none;"><div class="box">
+        <a href="event.html" style="text-decoration: none;"><div class="box">
             <div class="img">
                 <img src="https://image.freepik.com/free-vector/music-event-banner-template-with-photo_52683-12627.jpg" alt="" style="background-color: rgb(255, 109, 109);" class="ii"> 
             </div>
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div></a>
-        <a href="" style="text-decoration: none;"><div class="box">
+        <a href="event.html" style="text-decoration: none;"><div class="box">
             <div class="img">
                 <img src="https://image.freepik.com/free-vector/music-event-banner-design-template-festival-concert-party_85212-64.jpg" alt="" style="background-color: pink;" class="ii">
             </div>
@@ -55,7 +55,7 @@
                 </div>
             </div>
         </div></a>
-        <a href="" style="text-decoration: none;"><div class="box">
+        <a href="event.html" style="text-decoration: none;"><div class="box">
             <div class="img">
                 <img src="https://image.freepik.com/free-vector/trendy-event-banner-template_85212-590.jpg" alt="" style="background-color: rgb(250, 117, 250);" class="ii">
             </div>
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </div></a>
-        <a href="" style="text-decoration: none;"><div class="box">
+        <a href="event.html" style="text-decoration: none;"><div class="box">
             <div class="img">
                 <img src="https://image.freepik.com/free-vector/electro-music-night-party-banner-template_85212-173.jpg" alt="" style="background-color: rgb(255, 102, 153);" class="ii">
             </div>
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </div></a>
-        <a href="" style="text-decoration: none;"><div class="box">
+        <a href="event.html" style="text-decoration: none;"><div class="box">
             <div class="img">
                 <img src="https://image.freepik.com/free-vector/music-event-banner-template-with-photo_52683-13689.jpg" alt="" style="background-color: rgb(255, 102, 102);" class="ii">
             </div>
