--- a/index.html
+++ b/index.html
@@ -95,95 +95,9 @@
     <div class="who">
         <div class="we">
             <h1 class="hh">WHO WE ARE</h1>
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste eos, neque cum consequatur praesentium recusandae odio perspiciatis obcaecati consequuntur repellat, dolor totam inventore esse voluptatibus? Corporis sequi similique amet.</h4>
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste eos, het jssjfbsjkfb asjbfjhsbf aksjbkjab aksjnfkjasndmn kjasnkjasn neque cum consequatur praesentium recusandae odio perspiciatis obcaecati consequuntur repellat, dolor totam inventore esse voluptatibus? Corporis sequi similique amet.</h4>
 	    </div>
 	    </div>
-    <div class="landing">
-        <div class="con">
-            <h1>PACK YOUR BAGS AND GET READY FOR UPCOMING EVENTS</h1>
-            <a href="#up-event"><button>JUMP</button></a>
-        </div>
-    </div>
-    <div class="heading" id="up-event"><h1 class="hh">UPCOMING EVENTS</h1></div>
-    <div class="container">
-       <a href="" style="text-decoration: none;"><div class="box">
-            <div class="img">
-                <img src="https://img.freepik.com/free-vector/music-event-poster-template-with-abstract-shapes_1361-1316.jpg?size=626&ext=jpg" alt="" class="ii">
-            </div>
-            <div class="content">
-                <div class="date">
-                    <pre>11-JAN-2021  11:00 AM - 1:00 PM       <a href=""><i class="far fa-calendar"></i></a></pre>
-                    <h2>EVENT NAME</h2>
-                    <PRE>topic1  topic2  topic3  +more</PRE>
-                </div>
-            </div>
-        </div></a>
-        <a href="" style="text-decoration: none;"><div class="box">
-            <div class="img">
-                <img src="https://image.freepik.com/free-vector/music-event-banner-template-with-photo_52683-12627.jpg" alt="" style="background-color: rgb(255, 109, 109);" class="ii"> 
-            </div>
-            <div class="content">
-                <div class="date">
-                    <pre>11-JAN-2021  11:00 AM - 1:00 PM       <a href=""><i class="far fa-calendar"></i></a></pre>
-                    <h2>EVENT NAME</h2>
-                    <PRE>topic1  topic2  topic3  +more</PRE>
-                </div>
-            </div>
-        </div></a>
-        <a href="" style="text-decoration: none;"><div class="box">
-            <div class="img">
-                <img src="https://image.freepik.com/free-vector/music-event-banner-design-template-festival-concert-party_85212-64.jpg" alt="" style="background-color: pink;" class="ii">
-            </div>
-            <div class="content">
-                <div class="date">
-                    <pre>11-JAN-2021  11:00 AM - 1:00 PM       <a href=""><i class="far fa-calendar"></i></a></pre>
-                    <h2>EVENT NAME</h2>
-                    <PRE>topic1  topic2  topic3  +more</PRE>
-                </div>
-            </div>
-        </div></a>
-        <a href="" style="text-decoration: none;"><div class="box">
-            <div class="img">
-                <img src="https://image.freepik.com/free-vector/trendy-event-banner-template_85212-590.jpg" alt="" style="background-color: rgb(250, 117, 250);" class="ii">
-            </div>
-            <div class="content">
-                <div class="date">
-                    <pre>11-JAN-2021  11:00 AM - 1:00 PM       <a href=""><i class="far fa-calendar"></i></a></pre>
-                    <h2>EVENT NAME</h2>
-                    <PRE>topic1  topic2  topic3  +more</PRE>
-                </div>
-            </div>
-        </div></a>
-        <a href="" style="text-decoration: none;"><div class="box">
-            <div class="img">
-                <img src="https://image.freepik.com/free-vector/electro-music-night-party-banner-template_85212-173.jpg" alt="" style="background-color: rgb(255, 102, 153);" class="ii">
-            </div>
-            <div class="content">
-                <div class="date">
-                    <pre>11-JAN-2021  11:00 AM - 1:00 PM       <a href=""><i class="far fa-calendar"></i></a></pre>
-                    <h2>EVENT NAME</h2>
-                    <PRE>topic1  topic2  topic3  +more</PRE>
-                </div>
-            </div>
-        </div></a>
-        <a href="" style="text-decoration: none;"><div class="box">
-            <div class="img">
-                <img src="https://image.freepik.com/free-vector/music-event-banner-template-with-photo_52683-13689.jpg" alt="" style="background-color: rgb(255, 102, 102);" class="ii">
-            </div>
-            <div class="content">
-                <div class="date">
-                    <pre>11-JAN-2021  11:00 AM - 1:00 PM       <a href=""><i class="far fa-calendar"></i></a></pre>
-                    <h2>EVENT NAME</h2>
-                    <PRE>topic1  topic2  topic3  +more</PRE>
-                </div>
-            </div>
-        </div></a>
-    </div>
-    <div class="who">
-        <div class="we">
-            <h1 class="hh">WHO WE ARE</h1>
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste eos, neque cum consequatur praesentium recusandae odio perspiciatis obcaecati consequuntur repellat, dolor totam inventore esse voluptatibus? Corporis sequi similique amet.</h4></div>
-    </div>
     <h1 class="hh" style="margin-top: 100px; text-align: center;">OUR GALLERY</h1>
     <section class="gallery">
         <div class="card">
